--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.0",
+    "@element-plus/icons-vue": "^2.3.0",
+    "@supabase/supabase-js": "^2.95.3",
     "axios": "^1.6.0",
     "element-plus": "^2.5.0",
-    "@element-plus/icons-vue": "^2.3.0"
+    "vue": "^3.4.0",
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
